--- a/Flyer-design.html
+++ b/Flyer-design.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Flyer Designing</title>
+<title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+<meta name="keywords" content="flyer design services, custom flyer design, professional flyer designers, promotional flyers, event flyers, marketing flyers, creative flyer design, high-quality flyers, Technoartz, eye-catching flyers, digital flyer design, print flyer design, advertising flyers, unique flyer concepts, affordable flyer design, flyer design trends 2024, business flyers, flyer distribution, promotional materials">
+<meta name="description" content="Technoartz offers professional flyer design services to help you promote your events, products, or services effectively. Our creative designers craft eye-catching flyers that capture attention and communicate your message clearly. From promotional flyers to event announcements, we provide custom designs tailored to your specific needs. Contact us for unique flyer designs that engage your audience and drive results for your brand.">
+
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -26,9 +30,9 @@
     <!-- Preloader -->
     <!-- <div class="preloader"></div> -->
  	
-    <!-- Main Header / Header Style Five-->
-    <div include-html="header.html" id="header"></div>
-    <!--End Main Header -->
+   <!-- Main Header-->
+   <div include-html="header.html" id="header"></div>
+   <!--End Main Header -->
     
     <!--Page Title-->
     <section class="page-title" style="background-image:url(images/background/pattern-4.png);">
@@ -83,7 +87,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Flyer Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -98,7 +102,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Flyer Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -113,7 +117,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Flyer Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -135,7 +139,7 @@
 						<div class="inner-box">
                         	<h2>Flyer Designing</h2>
                             <div class="image">
-                            	<img src="images/services/flyer design.jpg" alt="" />
+                            	<img src="images/services/flyer design.jpg" alt="Flyer Designing" />
                             </div>
                             <div class="lower-content">
                             	<div class="text">
