--- a/display_advertising.html
+++ b/display_advertising.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>Display Advertising</title>
+
+<meta name="keywords" content="Display Advertising, online advertising, banner ads, digital marketing, programmatic advertising, display ad campaigns, visual advertising, remarketing, ad placements, audience targeting, Google Display Network, creative display ads, multimedia advertising, brand awareness, advertising metrics, CTR optimization, cost-per-thousand impressions (CPM), campaign management, ad performance analysis, digital media strategy, display advertising trends 2024, cross-platform advertising, mobile display ads, engaging ad designs">
+
+<meta name="description" content="Technoartz specializes in display advertising services that enhance brand visibility and drive targeted traffic. Our expert team creates visually engaging banner ads and multimedia campaigns designed for maximum impact across various platforms. From strategic placement to performance tracking, we ensure your display ads reach the right audience at the right time. Contact us to elevate your marketing strategy with effective display advertising solutions.">
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -83,7 +88,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Display Advertising" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -98,7 +103,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Display Advertising" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -113,7 +118,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Display Advertising" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -135,7 +140,7 @@
 						<div class="inner-box">
                         	<h2>Display Advertising</h2>
                             <div class="image">
-                            	<img src="images/services/16.jpg" alt="" />
+                            	<img src="images/services/16.jpg" alt="Display Advertising" />
                             </div>
                             <div class="lower-content">
                             	<div class="text" style="text-align: justify;">
