--- a/google_adwords.html
+++ b/google_adwords.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Google Adwords</title>
+<title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+
+<meta name="keywords" content="Google AdWords, Google Ads, PPC advertising, pay-per-click management, online advertising, search engine marketing, keyword research, ad copy optimization, campaign management, Google Ads strategy, ROI analysis, display advertising, remarketing campaigns, Google Ads certification, ad performance tracking, digital marketing, online lead generation, conversion tracking, landing page optimization, cost-per-click, Google Ads trends 2024, targeted advertising, advertising solutions">
+
+<meta name="description" content="Technoartz offers expert Google Ads management services to help businesses maximize their online visibility and drive targeted traffic. Our team specializes in creating, managing, and optimizing PPC campaigns that deliver measurable results. From keyword research to ad copy creation and performance analysis, we ensure your Google Ads campaigns achieve maximum ROI. Contact us to boost your online presence with effective Google Ads solutions.">
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -85,7 +90,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Google Adwords" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -100,7 +105,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Google Adwords" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -115,7 +120,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Google Adwords" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -137,7 +142,7 @@
 						<div class="inner-box">
                         	<h2>Google Adwords</h2>
                             <div class="image">
-                            	<img src="images/services/15.jpg" alt="" />
+                            	<img src="images/services/15.jpg" alt="Google Adwords" />
                             </div>
                             <div class="lower-content">
                             	<div class="text" style="text-align: justify;">
