--- a/newsletter-design.html
+++ b/newsletter-design.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>News-letter Designing</title>
+<title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+<meta name="keywords" content="newsletter design services, custom newsletter design, professional newsletter designers, email newsletter design, print newsletter design, engaging newsletters, marketing newsletters, brand communication, creative newsletter design, informative newsletters, Technoartz, email marketing solutions, newsletter templates, corporate newsletters, promotional newsletters, affordable newsletter design, newsletter design trends 2024, effective communication, audience engagement">
+<meta name="description" content="Technoartz provides professional newsletter design services that engage your audience and enhance communication. Our expert designers create visually appealing and informative newsletters tailored to your brand and audience needs. Whether for email marketing campaigns or print distribution, we ensure your newsletters are compelling and effective in delivering your message. Contact us for custom newsletter designs that drive engagement and strengthen your brand's connection with customers.">
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -86,7 +89,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="News-letter Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -101,7 +104,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="News-letter Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -116,7 +119,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="News-letter Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -138,7 +141,7 @@
 						<div class="inner-box">
                         	<h2>News-letter Designing</h2>
                             <div class="image">
-                            	<img src="images/services/news-letter.jpg" alt="" />
+                            	<img src="images/services/news-letter.jpg" alt="News-letter Designing" />
                             </div>
                             <div class="lower-content">
                             	<div class="text">
