--- a/social_media_marketing.html
+++ b/social_media_marketing.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Social Media Marketing</title>
+    <title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+    <meta name="keywords" content="Social Media Marketing, SMM, social media strategy, social media management, Facebook marketing, Instagram marketing, Twitter marketing, LinkedIn marketing, content creation, audience engagement, brand awareness, lead generation, social media advertising, analytics and reporting, influencer marketing, digital marketing, campaign management, organic social media growth, paid social media campaigns, social media optimization, community management, reputation management, social media trends 2024, cross-platform marketing, user-generated content">
+    
+    <meta name="description" content="Technoartz offers comprehensive social media marketing services to elevate your brand's online presence. Our expert team creates tailored strategies for platforms like Facebook, Instagram, Twitter, and LinkedIn, focusing on audience engagement, brand awareness, and lead generation. We handle content creation, social media management, and analytics to ensure your campaigns achieve optimal results. Contact us to enhance your social media presence with effective marketing solutions.">
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -90,7 +94,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Social Media Marketing" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -106,7 +110,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Social Media Marketing" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -122,7 +126,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Social Media Marketing" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -145,7 +149,7 @@
                             <div class="inner-box">
                                 <h2>Social Media marketing</h2>
                                 <div class="image">
-                                    <img src="images/services/13.jpg" alt="" />
+                                    <img src="images/services/13.jpg" alt="Social Media Marketing" />
                                 </div>
                                 <div class="lower-content">
                                     <div class="text" style="text-align: justify;">
