--- a/bulk_sms.html
+++ b/bulk_sms.html
@@ -85,7 +85,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Bulk SMS" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -100,7 +100,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Bulk SMS" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -115,7 +115,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Bulk SMS" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -137,7 +137,7 @@
 						<div class="inner-box">
                         	<h2>Bulk SMS</h2>
                             <div class="image">
-                            	<img src="images/services/19.jpg" alt="" />
+                            	<img src="images/services/19.jpg" alt="Bulk SMS" />
                             </div>
                             <div class="lower-content">
                             	<div class="text" style="text-align: justify;">
