--- a/email-marketing.html
+++ b/email-marketing.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>Email Marketing</title>
+
+<meta name="keywords" content="Market Research, market analysis, customer insights, competitor analysis, qualitative research, quantitative research, survey design, focus groups, data analysis, market trends, consumer behavior, market segmentation, research methodologies, industry reports, brand perception, SWOT analysis, market entry strategy, business intelligence, product testing, Technoartz, market research services, actionable insights, target audience analysis, market research trends 2024, data-driven decisions">
+
+<meta name="description" content="Technoartz offers comprehensive market research services to help businesses make informed decisions. Our expert team conducts qualitative and quantitative research, analyzes market trends, and provides actionable insights tailored to your specific needs. From customer surveys to competitor analysis, we equip your business with the knowledge to thrive in a competitive landscape. Contact us for customized market research solutions that drive success.">
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -85,7 +90,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Email Marketing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -100,7 +105,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Email Marketing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -115,7 +120,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Email Marketing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -137,7 +142,7 @@
 						<div class="inner-box">
                         	<h2>Email marketing</h2>
                             <div class="image">
-                            	<img src="images/services/18.jpg" alt="" />
+                            	<img src="images/services/18.jpg" alt="Email Marketing" />
                             </div>
                             <div class="lower-content">
                             	<div class="text" style="text-align: justify;">
