--- a/poster-design.html
+++ b/poster-design.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+<meta name="keywords" content="poster design services, custom poster design, professional poster designers, event posters, promotional posters, marketing posters, creative poster design, high-quality poster design, Technoartz, eye-catching posters, digital poster design, print poster design, advertising posters, unique poster concepts, affordable poster design, visual communication, poster design trends 2024, large format posters">
+<meta name="description" content="Technoartz offers professional poster design services that captivate and engage your audience. Our creative designers craft eye-catching posters for events, promotions, and marketing campaigns, ensuring your message stands out. With a focus on innovative design and high-quality visuals, we create custom posters tailored to your specific needs. Contact us for unique poster designs that leave a lasting impression and drive attention to your brand.">
 
 
 <!-- Stylesheets -->
@@ -87,7 +89,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Poster Design" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -102,7 +104,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Poster Design" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -117,7 +119,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Poster Design" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -139,7 +141,7 @@
 						<div class="inner-box">
                         	<h2>Poster Designing</h2>
                             <div class="image">
-                            	<img src="images/services/poster design.jpg" alt="" />
+                            	<img src="images/services/poster design.jpg" alt="Poster Design" />
                             </div>
                             <div class="lower-content">
                             	<div class="text">
