--- a/seo.html
+++ b/seo.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SEO</title>
+    <meta name="keywords" content="SEO, Search Engine Optimization, On-Page SEO, Off-Page SEO, Technical SEO, Local SEO, Keyword Research, SEO Audits, Backlinking, Content Optimization, SERP Rankings, Organic Traffic, Google Analytics, Digital Marketing, SEO Strategies, E-commerce SEO, SEO Tools, Mobile SEO, Voice Search Optimization, SEO Best Practices, Site Structure Optimization, Meta Tags, Alt Text, Social Media SEO, Competitor Analysis, Analytics and Reporting, Website Performance, SEO Consulting, SEO Trends 2024">
+
+    <meta name="description" content="Technoartz offers expert SEO services designed to enhance your online visibility and drive organic traffic. Our team specializes in on-page SEO, off-page SEO, technical SEO, and local SEO strategies to improve your search engine rankings. We provide comprehensive SEO audits, keyword research, and content optimization to help your business succeed in the digital landscape. Contact us to elevate your brand's presence with effective SEO solutions.">
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -89,7 +92,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Search engine optimization" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -105,7 +108,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Search engine optimization" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -121,7 +124,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Search engine optimization" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -144,7 +147,7 @@
                             <div class="inner-box">
                                 <h2>SEO</h2>
                                 <div class="image">
-                                    <img src="images/services/14.jpg" alt="" />
+                                    <img src="images/services/14.jpg" alt="Search engine optimization" />
                                 </div>
                                 <div class="lower-content">
                                     <div class="text" style="text-align: justify;">
