--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         
 
         <!--We Are Section-->
-        <section class="about-section">
+        <!-- <section class="about-section">
             <div class="about-container">
                 <div class="row">
                     <div class="about-image">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     <!--End We Are Section-->
     <!-- services-section-two start -->
     <section class="services-section-two">
