--- a/ui-developer.html
+++ b/ui-developer.html
@@ -118,14 +118,7 @@
                                                     <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">""I am excited to join Technoarts as part of their talented team. The company's innovative and forward-thinking approach aligns perfectly with my passion for technology. I look forward to contributing to impactful projects and growing my skills in this dynamic environment."
-
-
-
-
-
-
-                                                ."</div>
+                                            <div class="text">"I am excited to join Technoarts as part of their talented team. The company's innovative and forward-thinking approach aligns perfectly with my passion for technology. I look forward to contributing to impactful projects and growing my skills in this dynamic environment."</div>
                                         </div>
                                     </div>
 
@@ -159,7 +152,7 @@
                                                     <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">"As a UI Developer, I’m thrilled to join Technoarts and work with their talented team. The company’s forward-thinking vision aligns with my passion for technology, and I’m eager to contribute to meaningful projects while enhancing my skills."</div>
+                                            <div class="text">"As a UI Developer, I’m thrilled to join Technoarts and work with their talented team. The company’s forward-thinking vision aligns with my passion for technology, and I’m eager to contribute to meaningful projects while enhancing my skills.</div>
                                         </div>
                                     </div>
 
