--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 <head>
     <meta charset="utf-8">
     <title> TECHNOARTZ | Comprehensive Website Development, Digital Marketing, Graphics Designing Services </title>
+    <meta name="title" content="Technoartz | Comprehensive Website Development, Digital Marketing, Graphics Designing Services">
+<meta name="description" content="Discover top-notch digital marketing, web development, software development, and graphic designing services at Technoartz IT Solutions. Our experts provide quality business and smart IT solutions tailored to your needs.">
+<meta name="keywords" content="Technoartz, Digital Marketing, Web Development, Graphics Designing, Software Development, UI/UX, Mobile Application Development, SEO, E-commerce Development, Pune">
+<meta name="robots" content="index, follow">
+<meta name="author" content="Technoartz IT Solutions">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="Technoartz | Comprehensive Website Development, Digital Marketing, Graphics Designing Services">
+<meta property="og:description" content="We offer expert IT solutions in digital marketing, website development, mobile apps, and graphic design, delivering results for businesses across sectors.">
+<meta property="og:image" content="https://www.technoartz.com/images/logo.png">
+<meta property="og:url" content="https://www.technoartz.com">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="en_US">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Technoartz | Website Development, Digital Marketing & Graphics Services">
+<meta name="twitter:description" content="Your trusted partner for expert digital marketing, web development, software development, and graphic designing solutions.">
+<meta name="twitter:image" content="https://www.technoartz.com/images/logo.png">
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="plugins/revolution/css/settings.css" rel="stylesheet" type="text/css">
