--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
             <div class="about-container">
                 <div class="row">
                     <div class="about-image">
-                        <img src="images/resource/sandipgadekar.jpg" alt="Sandip Gadekar - CEO and Founder of Technoartz IT Solutions">
+                        <img src="images/about us/aboutourcompany.jpg" alt="Sandip Gadekar - CEO and Founder of Technoartz IT Solutions">
                     </div>
                     <div class="about-content">
                         
