--- a/internship.html
+++ b/internship.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Industrial Internships | Stipend Internships | Industrial Internship for IT, Computer Science, and Engineering | Latest Technology Internships with Job
+    <title> Industrial Internships | Stipend Internships |Internship for IT, Computer Science, and Engineering | Latest
+        Technology Internships with Job
         Placement Guarantee |Free Internship | Kharadi Technoartz Pune</title>
 
     <!-- Stylesheets -->
@@ -13,11 +14,12 @@
 
     <link rel="shortcut icon" href="images/ggg.png" type="image/x-icon">
     <link rel="icon" href="images/ggg.png" type="image/x-icon">
+    <!-- <link href="css/internship.css" rel="internship_style_page"> -->
 
     <!-- SEO Meta Tags -->
     <meta name="description"
         content="Explore paid and free internships with college placements at Technoartz in Kharadi, Pune. Get hands-on experience in Software Testing, Web Development, Java, Angular, and more with 100% placement support and stipends for eligible internships.">
-    
+
     <meta name="keywords"
         content="College Placement, Paid Internship, Free Internship, Stipend Internship, Technoartz, Kharadi Pune, Software Testing Internship, Web Development Internship, Java Development, Angular Development, Career Guidance, Internship with Placement, IT Internships, Computer Science Internship, Industrial Training, Job Placement Support, Full Stack Development Internship, Digital Marketing Internship">
 
@@ -39,7 +41,8 @@
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Paid and Free Internships | Technoartz | 100% Placement Support">
+    <meta name="twitter:title"
+        content="Stipend, Paid and Free Internships | Technoartz | 100% Placement Support |Carrer Startup Internship">
     <meta name="twitter:description"
         content="Join our internship program at Technoartz in Kharadi, Pune. Gain hands-on experience in Software Testing, Angular, Java, and more with stipends and job placement support.">
     <meta name="twitter:image" content="images/internship-banner.jpg">
@@ -97,8 +100,7 @@
                     <div class="news-block col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/ui-developer.jpg"
-                                    alt="UI_Development_img" />
+                                <img src="images/resource/ui-developer.jpg" alt="UI_Development_img" />
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
@@ -118,8 +120,7 @@
                     <div class="news-block col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/angular.jpg"
-                                    alt="Angular_Development_img" />
+                                <img src="images/resource/angular.jpg" alt="Angular_Development_img" />
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
@@ -140,8 +141,7 @@
                     <div class="news-block col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/asp.net.jpg"
-                                    alt="ASP.Net_Development_img" />
+                                <img src="images/resource/asp.net.jpg" alt="ASP.Net_Development_img" />
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
@@ -159,8 +159,7 @@
                     <div class="news-block col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/java.jpg"
-                                    alt="Java_Development_img" />
+                                <img src="images/resource/java.jpg" alt="Java_Development_img" />
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
@@ -179,8 +178,7 @@
                     <div class="news-block col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/react.jpg"
-                                    alt="React_Development_img" />
+                                <img src="images/resource/react.jpg" alt="React_Development_img" />
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
@@ -198,8 +196,7 @@
                     <div class="news-block col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/php.jpg"
-                                    alt="Php_Development_img" />
+                                <img src="images/resource/php.jpg" alt="Php_Development_img" />
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
@@ -320,7 +317,8 @@
                                     <h3><a href="hr_executive_jobopening.html">HR Executive</a></h3>
                                 </div>
                                 <div class="more">
-                                    <a href="hr_executive_jobopening.html" class="read-more"><span class="fa fa-chevron-circle-right"></span> Read
+                                    <a href="hr_executive_jobopening.html" class="read-more"><span
+                                            class="fa fa-chevron-circle-right"></span> Read
                                         More</a>
                                 </div>
                             </div>
@@ -339,7 +337,8 @@
                                     <h3><a href="data_analytics_jobopportunities.html">Data Analytics</a></h3>
                                 </div>
                                 <div class="more">
-                                    <a href="data_analytics_jobopportunities.html" class="read-more"><span class="fa fa-chevron-circle-right"></span> Read
+                                    <a href="data_analytics_jobopportunities.html" class="read-more"><span
+                                            class="fa fa-chevron-circle-right"></span> Read
                                         More</a>
                                 </div>
                             </div>
@@ -357,7 +356,8 @@
                                     <h3><a href="data_science_jobopportunities.html">Data Science</a></h3>
                                 </div>
                                 <div class="more">
-                                    <a href="data_science_jobopportunities.html" class="read-more"><span class="fa fa-chevron-circle-right"></span> Read
+                                    <a href="data_science_jobopportunities.html" class="read-more"><span
+                                            class="fa fa-chevron-circle-right"></span> Read
                                         More</a>
                                 </div>
                             </div>
